--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Laporan Kinerja Harian</title>
-  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-  <div class="container mt-4">
+  <div class="container my-4">
     <h3 class="text-center">Laporan Kinerja Harian</h3>
-    <p class="text-center text-muted">Form aktif Senin–Jumat, 08.00–22.00. Hanya dapat diisi 1x/hari.</p>
+    <p class="text-center text-muted">
+      Isi laporan Anda hanya sekali setiap hari kerja (Senin–Jumat) antara pukul 08.00–22.00.
+    </p>
 
     <form id="laporanForm">
       <div class="mb-3">
@@ -19,15 +23,15 @@
       </div>
 
       <div id="detailPegawai" style="display:none;">
-        <p><strong>NIP:</strong> <span id="nip"></span></p>
-        <p><strong>Sub Bidang:</strong> <span id="subbid"></span></p>
-        <p><strong>Status:</strong> <span id="status"></span></p>
-        <p><strong>Golongan:</strong> <span id="golongan"></span></p>
-        <p><strong>Jabatan:</strong> <span id="jabatan"></span></p>
+        <p>NIP: <span id="nip"></span></p>
+        <p>Sub Bidang: <span id="subbid"></span></p>
+        <p>Status: <span id="status"></span></p>
+        <p>Golongan: <span id="golongan"></span></p>
+        <p>Jabatan: <span id="jabatan"></span></p>
       </div>
 
-      <div id="sesiContainer" class="mb-3"></div>
-
+      <hr />
+      <div id="sesiContainer"></div>
       <button type="submit" class="btn btn-primary">Kirim Laporan</button>
     </form>
   </div>
