--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -32,7 +31,7 @@
 
       <hr />
       <div id="sesiContainer"></div>
-      <button type="submit" class="btn btn-primary">Kirim Laporan</button>
+      <button type="submit" id="btnSubmit" class="btn btn-primary">Kirim Laporan</button>
     </form>
   </div>
 
