--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <hr />
       <div id="sesiContainer"></div>
-      <button type="submit" id="btnSubmit" class="btn btn-primary">Kirim Laporan</button>
+      <button id="btnSubmit" type="button" class="btn btn-primary">Kirim Laporan</button>
     </form>
   </div>
 
