--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <p class="text-center text-muted">
       Isi laporan Anda hanya sekali setiap hari kerja (Senin–Jumat) antara pukul 08.00–22.00.
     </p>
-
+<div id="pinOverlay" class="position-fixed top-0 start-0 w-100 h-100 bg-white d-flex flex-column justify-content-center align-items-center" style="z-index: 9999;">
+  <h4>Masukkan PIN Akses</h4>
+  <input type="password" id="accessPin" class="form-control w-50 my-2" placeholder="PIN Anda">
+  <button class="btn btn-primary" onclick="validateAccessPin()">Masuk</button>
+  <p id="pinError" class="text-danger mt-2" style="display: none;">PIN salah. Silakan coba lagi.</p>
+</div>
     <form id="laporanForm">
       <div class="mb-3">
         <label for="nama" class="form-label">Nama Pegawai</label>
