--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
+  <div id="loadingSpinner" style="display:none;">Loading...</div>
 <div id="pinOverlay" class="position-fixed top-0 start-0 w-100 h-100 bg-light d-flex justify-content-center align-items-center" style="z-index: 9999;">
   <div class="card p-4 shadow" style="min-width: 300px;">
     <h5 class="card-title mb-3 text-center">Masukkan PIN Akses</h5>
