--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           <div class="col-md-2">
             <button class="btn btn-primary w-100" onclick="login()">Login</button>
           </div>
+          <div class="col-md-1">
+        <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">Lihat Dashboard</a>
+      </div>
         </div>
       </div>
     </div>
@@ -40,9 +43,7 @@
 
       <div id="sesi-form"></div>
 
-      <div class="mt-4">
-        <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">Lihat Dashboard</a>
-      </div>
+      
     </div>
   </div>
 
