--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
-<!-- index.html (letakkan di GitHub Pages) -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laporan Harian Pegawai</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laporan Harian</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-  <div class="container py-4">
-    <div class="d-flex flex-column flex-md-row justify-content-between align-items-start mb-3 gap-2">
-      <div class="d-flex flex-wrap gap-2">
-        <select id="nama" class="form-select" style="min-width: 200px"></select>
-        <input type="password" id="pin" class="form-control" placeholder="Masukkan PIN" />
-        <button id="btnLogin" class="btn btn-primary">Login</button>
-      </div>
-      <a href="https://lookerstudio.google.com/reporting/..." class="btn btn-success mt-2 mt-md-0" target="_blank">Dashboard</a>
+<div class="container mt-5">
+  <div class="d-flex flex-wrap justify-content-between mb-4">
+    <div class="d-flex flex-wrap gap-2">
+      <select id="nama" class="form-select" style="min-width:180px"></select>
+      <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width:120px">
+      <button onclick="login()" class="btn btn-primary">Login</button>
     </div>
-
-    <div id="formContainer" style="display: none">
-      <div class="row mb-3">
-        <div class="col">
-          <p id="infoPegawai" class="fw-bold"></p>
-        </div>
-      </div>
-
-      <div id="formSesi"></div>
+    <div class="mt-2 mt-md-0">
+      <a href="https://lookerstudio.google.com/reporting/xyz" class="btn btn-outline-secondary" target="_blank">Dashboard</a>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <div id="biodata" class="mb-3 d-none">
+    <strong>NIP:</strong> <span id="nip"></span><br>
+    <strong>Sub Bidang:</strong> <span id="subbid"></span><br>
+    <strong>Status:</strong> <span id="status"></span><br>
+    <strong>Golongan:</strong> <span id="gol"></span><br>
+    <strong>Jabatan:</strong> <span id="jabatan"></span>
+  </div>
+
+  <div id="sesi-form" class="d-none"></div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
