--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laporan Harian</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Laporan Kinerja Harian</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container mt-5">
-  <div class="d-flex flex-wrap justify-content-between mb-4">
-    <div class="d-flex flex-wrap gap-2">
-      <select id="nama" class="form-select" style="min-width:180px"></select>
-      <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width:120px">
-      <button onclick="login()" class="btn btn-primary">Login</button>
+  <div class="container mt-5">
+    <h3 class="text-center mb-4">Laporan Kinerja Harian</h3>
+
+    <div class="card mb-3">
+      <div class="card-body">
+        <div class="row g-2 align-items-end">
+          <div class="col-md-4">
+            <label class="form-label">Nama Pegawai</label>
+            <select id="nama" class="form-select"></select>
+          </div>
+          <div class="col-md-3">
+            <label class="form-label">PIN</label>
+            <input type="password" id="pin" class="form-control">
+          </div>
+          <div class="col-md-2">
+            <button class="btn btn-primary w-100" onclick="login()">Login</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="mt-2 mt-md-0">
-      <a href="https://lookerstudio.google.com/reporting/xyz" class="btn btn-outline-secondary" target="_blank">Dashboard</a>
+
+    <div id="form-wrapper" style="display:none">
+      <div class="mb-3">
+        <strong>NIP:</strong> <span id="nip"></span><br>
+        <strong>Sub Bidang:</strong> <span id="subbid"></span><br>
+        <strong>Status:</strong> <span id="status"></span><br>
+        <strong>Golongan:</strong> <span id="gol"></span><br>
+        <strong>Jabatan:</strong> <span id="jabatan"></span>
+      </div>
+
+      <div id="sesi-form"></div>
+
+      <div class="mt-4">
+        <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">Lihat Dashboard</a>
+      </div>
     </div>
   </div>
 
-  <div id="biodata" class="mb-3 d-none">
-    <strong>NIP:</strong> <span id="nip"></span><br>
-    <strong>Sub Bidang:</strong> <span id="subbid"></span><br>
-    <strong>Status:</strong> <span id="status"></span><br>
-    <strong>Golongan:</strong> <span id="gol"></span><br>
-    <strong>Jabatan:</strong> <span id="jabatan"></span>
-  </div>
-
-  <div id="sesi-form" class="d-none"></div>
-</div>
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
