--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Laporan Kinerja Harian</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container mt-5">
@@ -15,16 +14,20 @@
     <div class="card mb-3">
       <div class="card-body">
         <div class="row g-2 align-items-end">
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <label class="form-label">Nama Pegawai</label>
             <select id="nama" class="form-select"></select>
           </div>
-          <div class="col-md-3">
+          <div class="col-12 col-md-3">
             <label class="form-label">PIN</label>
             <input type="password" id="pin" class="form-control">
           </div>
-          <div class="col-md-2">
+          <div class="col-12 col-md-2">
             <button class="btn btn-primary w-100" onclick="login()">Login</button>
+          </div>
+          <div class="col-12 col-md-3">
+            <label class="form-label d-none d-md-block">&nbsp;</label>
+            <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary w-100">Dashboard</a>
           </div>
         </div>
       </div>
@@ -41,9 +44,6 @@
 
       <div id="sesi-form"></div>
 
-      <div class="mt-4">
-        <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">Lihat Dashboard</a>
-      </div>
     </div>
   </div>
 
