--- a/index.html
+++ b/index.html
@@ -1,49 +1,33 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Laporan Kinerja Harian</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-  <div class="container mt-5">
-    <h3 class="text-center mb-4">Laporan Kinerja Harian</h3>
-
-    <div class="card mb-3">
-      <div class="card-body">
-        <div class="row g-2 align-items-end">
-          <div class="col-12 col-md-4">
-            <label class="form-label">Nama Pegawai</label>
-            <select id="nama" class="form-select"></select>
-          </div>
-          <div class="col-12 col-md-3">
-            <label class="form-label">PIN</label>
-            <input type="password" id="pin" class="form-control">
-          </div>
-          <div class="col-12 col-md-2">
-            <button class="btn btn-primary w-100" onclick="login()">Login</button>
-          </div>
-          <div class="col-12 col-md-3">
-            <label class="form-label d-none d-md-block">&nbsp;</label>
-            <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary w-100">Dashboard</a>
-          </div>
-        </div>
+  <div class="container mt-4">
+    <div class="d-flex flex-wrap align-items-end justify-content-between gap-2">
+      <div class="d-flex flex-wrap gap-2">
+        <select id="nama" class="form-select" style="min-width: 200px"></select>
+        <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width: 100px"/>
+        <button class="btn btn-primary" onclick="login()">Login</button>
       </div>
+      <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">Dashboard</a>
     </div>
 
-    <div id="form-wrapper" style="display:none">
+    <div id="form-wrapper" style="display:none" class="mt-4">
       <div class="mb-3">
-        <strong>NIP:</strong> <span id="nip"></span><br>
-        <strong>Sub Bidang:</strong> <span id="subbid"></span><br>
-        <strong>Status:</strong> <span id="status"></span><br>
-        <strong>Golongan:</strong> <span id="gol"></span><br>
+        <strong>NIP:</strong> <span id="nip"></span><br />
+        <strong>Sub Bidang:</strong> <span id="subbid"></span><br />
+        <strong>Status:</strong> <span id="status"></span><br />
+        <strong>Golongan:</strong> <span id="golongan"></span><br />
         <strong>Jabatan:</strong> <span id="jabatan"></span>
       </div>
 
       <div id="sesi-form"></div>
-
     </div>
   </div>
 
