--- a/index.html
+++ b/index.html
@@ -6,28 +6,56 @@
   <title>Laporan Kinerja Harian</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <style>
+    .card-header {
+      background-color: #0d6efd;
+      color: white;
+      font-weight: bold;
+    }
+    .btn-dashboard {
+      white-space: nowrap;
+    }
+  </style>
 </head>
 <body>
-  <div class="container mt-4">
-    <div class="d-flex flex-wrap align-items-end justify-content-between gap-2">
-      <div class="d-flex flex-wrap gap-2">
-        <select id="nama" class="form-select" style="min-width: 200px"></select>
-        <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width: 100px"/>
-        <button class="btn btn-primary" onclick="login()">Login</button>
+  <div class="container my-4">
+    <div class="card">
+      <div class="card-header text-center">
+        Laporan Kinerja Harian Pegawai
       </div>
-      <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">Dashboard</a>
+      <div class="card-body">
+        <form class="row g-2 align-items-end">
+          <div class="col-12 col-md-4">
+            <label for="nama" class="form-label">Nama Pegawai</label>
+            <select id="nama" class="form-select" required></select>
+          </div>
+          <div class="col-12 col-md-3">
+            <label for="pin" class="form-label">PIN</label>
+            <input type="password" id="pin" class="form-control" required>
+          </div>
+          <div class="col-6 col-md-2 d-grid">
+            <button type="button" class="btn btn-primary" onclick="login()">Login</button>
+          </div>
+          <div class="col-6 col-md-3 d-grid">
+            <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary btn-dashboard">📊 Dashboard</a>
+          </div>
+        </form>
+      </div>
     </div>
 
-    <div id="form-wrapper" style="display:none" class="mt-4">
-      <div class="mb-3">
-        <strong>NIP:</strong> <span id="nip"></span><br />
-        <strong>Sub Bidang:</strong> <span id="subbid"></span><br />
-        <strong>Status:</strong> <span id="status"></span><br />
-        <strong>Golongan:</strong> <span id="golongan"></span><br />
-        <strong>Jabatan:</strong> <span id="jabatan"></span>
+    <div id="form-wrapper" class="mt-4" style="display: none;">
+      <div class="card">
+        <div class="card-body">
+          <div class="mb-3">
+            <strong>NIP:</strong> <span id="nip"></span><br />
+            <strong>Sub Bidang:</strong> <span id="subbid"></span><br />
+            <strong>Status:</strong> <span id="status"></span><br />
+            <strong>Golongan:</strong> <span id="gol"></span><br />
+            <strong>Jabatan:</strong> <span id="jabatan"></span>
+          </div>
+          <div id="sesi-form"></div>
+        </div>
       </div>
-
-      <div id="sesi-form"></div>
     </div>
   </div>
 
