--- a/index.html
+++ b/index.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laporan Kinerja Pegawai</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laporan Kinerja Harian</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <style>
+    .card-sesi {
+      margin-bottom: 1rem;
+    }
+    @media (min-width: 768px) {
+      .login-dashboard-row {
+        flex-direction: row;
+        align-items: flex-end;
+      }
+    }
+    @media (max-width: 767.98px) {
+      .login-dashboard-row {
+        flex-direction: column;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="container py-5">
+<div class="container py-5">
     <!-- Header dengan Judul dan Deskripsi Panduan -->
     <header class="text-center mb-5">
       <h1 class="display-4">Laporan Kinerja Pegawai</h1>
       <p class="lead">Sistem laporan harian untuk mencatat aktivitas pegawai setiap hari. Pilih nama, masukkan PIN, dan kirimkan laporan sesi Anda dengan mengisi uraian pekerjaan dan mengunggah bukti dukung.</p>
     </header>
-
-    <!-- Form Login -->
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card shadow-lg p-4">
-          <h3 class="card-title text-center mb-4">Login Pegawai</h3>
-          <div class="card-body">
-            <form id="login-form">
-              <div class="mb-3">
-                <label for="nama" class="form-label">Nama Pegawai</label>
-                <select id="nama" class="form-select">
-                  <option value="">Pilih Nama</option>
-                </select>
-              </div>
-              <div class="mb-3">
-                <label for="pin" class="form-label">PIN</label>
-                <input type="password" id="pin" class="form-control" placeholder="Masukkan PIN" required>
-              </div>
-              <div class="d-flex justify-content-between">
-                <button type="button" class="btn btn-primary" onclick="login()">Login</button>
-                <a href="#" class="btn btn-info" target="_blank">Dashboard</a>
-              </div>
-            </form>
-          </div>
-        </div>
+  <div class="container my-4">
+    <!-- Login + Dashboard Row -->
+    <div class="d-flex login-dashboard-row flex-wrap gap-2 justify-content-between mb-4">
+      <div class="d-flex flex-wrap gap-2">
+        <select id="nama" class="form-select" style="min-width: 200px" required></select>
+        <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width: 100px" required/>
+        <button class="btn btn-primary" onclick="login()">Login</button>
       </div>
+      <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">📊 Dashboard</a>
     </div>
 
-    <!-- Form Laporan -->
-    <div id="form-wrapper" class="mt-4" style="display:none;">
+    <!-- Form Wrapper -->
+    <div id="form-wrapper" style="display:none;">
+      <!-- Card Info Pegawai -->
+      <div class="card mb-4">
+        <div class="card-body">
+          <h5 class="card-title mb-3">Informasi Pegawai</h5>
+          <p class="mb-1"><strong>NIP:</strong> <span id="nip"></span></p>
+          <p class="mb-1"><strong>Sub Bidang:</strong> <span id="subbid"></span></p>
+          <p class="mb-1"><strong>Status Kepegawaian:</strong> <span id="status"></span></p>
+          <p class="mb-1"><strong>Golongan:</strong> <span id="golongan"></span></p>
+          <p class="mb-0"><strong>Jabatan:</strong> <span id="jabatan"></span></p>
+        </div>
+      </div>
+
+      <!-- Form Sesi -->
       <div id="sesi-form"></div>
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js"></script>
 </body>
 </html>
