--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
       <p class="lead">Sistem laporan harian untuk mencatat aktivitas pegawai setiap hari. Pilih nama, masukkan PIN, dan kirimkan laporan sesi Anda dengan mengisi uraian pekerjaan dan mengunggah bukti dukung.</p>
     </header>
 <div class="container my-4">
-    <!-- Login + Dashboard Row -->
-    <div class="d-flex login-dashboard-row flex-wrap gap-2 justify-content-between mb-4">
-      <div class="d-flex flex-wrap gap-2">
-        <select id="nama" class="form-select" style="min-width: 200px" required></select>
-        <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width: 100px" required/>
-        <button class="btn btn-primary" onclick="login()">Login</button>
-      </div>
-      <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">📊 Dashboard</a>
+  <!-- Login + Dashboard Row -->
+  <form onsubmit="login(); return false;" class="d-flex flex-wrap gap-2 justify-content-center justify-content-sm-between align-items-center">
+    <select id="nama" class="form-select" style="min-width: 180px" required></select>
+    <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width: 100px" required />
+    <div class="d-flex gap-2">
+      <button type="submit" class="btn btn-primary">Login</button>
+      <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-outline-secondary">
+        📊 Dashboard
+      </a>
     </div>
-
+  </form>
+</div>
     <!-- Form Wrapper -->
     <div id="form-wrapper" style="display:none;">
       <!-- Card Info Pegawai -->
