--- a/index.html
+++ b/index.html
@@ -30,32 +30,38 @@
       <h1 class="display-4">Laporan Kinerja Pegawai</h1>
       <p class="lead">Sistem laporan harian untuk mencatat aktivitas pegawai setiap hari. Pilih nama, masukkan PIN, dan kirimkan laporan sesi Anda dengan mengisi uraian pekerjaan dan mengunggah bukti dukung.</p>
     </header>
-<div class="container my-4">
-  <!-- Login + Dashboard Row -->
-  <form onsubmit="login(); return false;" class="d-flex flex-wrap gap-2 justify-content-center justify-content-sm-between align-items-center">
-    <select id="nama" class="form-select" style="min-width: 180px" required></select>
-    <input type="password" id="pin" class="form-control" placeholder="PIN" style="min-width: 100px" required />
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card shadow p-4" style="width: 100%; max-width: 500px;">
+    <h2 class="text-center mb-2">Laporan Kinerja Pegawai</h2>
+    <p class="text-center text-muted mb-4" style="font-size: 0.95rem;">
+      Sistem laporan harian untuk mencatat aktivitas pegawai setiap hari. Pilih nama, masukkan PIN, dan kirimkan laporan sesi Anda.
+    </p>
     
-    <div class="d-flex gap-2">
-      <!-- Tombol Login -->
-      <button type="submit" class="btn btn-dark d-flex align-items-center gap-1">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
-          <path d="M5.5 8a1.5 1.5 0 1 1 3 0v1.086a1.5 1.5 0 1 1-3 0V8zm1.5-3a1 1 0 0 0-1 1v1.086a2.5 2.5 0 1 0 2 0V6a1 1 0 0 0-1-1z"/>
-          <path d="M8 0c-.69 0-1.37.116-2.015.337a4.992 4.992 0 0 0-1.63.965C3.373 2.088 2.25 3.375 1.56 5.001a9.26 9.26 0 0 0-.498 2.662c0 3.122 1.597 5.563 3.578 6.92C6.382 15.773 7.176 16 8 16s1.618-.227 2.36-.417c1.981-1.356 3.578-3.797 3.578-6.92a9.26 9.26 0 0 0-.498-2.662c-.69-1.626-1.813-2.913-2.795-3.699a4.992 4.992 0 0 0-1.63-.965A6.52 6.52 0 0 0 8 0z"/>
-        </svg>
-        Login
-      </button>
+    <form onsubmit="login(); return false;" class="d-grid gap-3">
+      <select id="nama" class="form-select" required>
+        <option value="">Pilih Nama</option>
+      </select>
+      <input type="password" id="pin" class="form-control" placeholder="PIN" required />
 
-      <!-- Tombol Dashboard -->
-      <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-success d-flex align-items-center gap-1">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bar-chart-line" viewBox="0 0 16 16">
-          <path d="M0 0h1v15h15v1H0V0z"/>
-          <path d="M10 10h1v3h-1v-3zM7 6h1v7H7V6zM4 9h1v4H4V9z"/>
-        </svg>
-        Dashboard
-      </a>
-    </div>
-  </form>
+      <div class="d-flex justify-content-between gap-2">
+        <button type="submit" class="btn btn-dark btn-lg d-flex align-items-center gap-2 px-4 py-2 w-50">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
+            <path d="M5.5 8a1.5 1.5 0 1 1 3 0v1.086a1.5 1.5 0 1 1-3 0V8zm1.5-3a1 1 0 0 0-1 1v1.086a2.5 2.5 0 1 0 2 0V6a1 1 0 0 0-1-1z"/>
+            <path d="M8 0c-.69 0-1.37.116-2.015.337a4.992 4.992 0 0 0-1.63.965C3.373 2.088 2.25 3.375 1.56 5.001a9.26 9.26 0 0 0-.498 2.662c0 3.122 1.597 5.563 3.578 6.92C6.382 15.773 7.176 16 8 16s1.618-.227 2.36-.417c1.981-1.356 3.578-3.797 3.578-6.92a9.26 9.26 0 0 0-.498-2.662c-.69-1.626-1.813-2.913-2.795-3.699a4.992 4.992 0 0 0-1.63-.965A6.52 6.52 0 0 0 8 0z"/>
+          </svg>
+          Login
+        </button>
+
+        <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" class="btn btn-success btn-lg d-flex align-items-center gap-2 px-4 py-2 w-50">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-bar-chart-line" viewBox="0 0 16 16">
+            <path d="M0 0h1v15h15v1H0V0z"/>
+            <path d="M10 10h1v3h-1v-3zM7 6h1v7H7V6zM4 9h1v4H4V9z"/>
+          </svg>
+          Dashboard
+        </a>
+      </div>
+    </form>
+  </div>
 </div>
 
 
