--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1 class="display-4">Laporan Kinerja Pegawai</h1>
       <p class="lead">Sistem laporan harian untuk mencatat aktivitas pegawai setiap hari. Pilih nama, masukkan PIN, dan kirimkan laporan sesi Anda dengan mengisi uraian pekerjaan dan mengunggah bukti dukung.</p>
     </header>
-<div class="container d-flex justify-content-center align-items-center vh-100">
+<div class="container d-flex justify-content-center mt-4">
   <div class="card shadow p-4" style="width: 100%; max-width: 500px;">
     <h2 class="text-center mb-2">Laporan Kinerja Pegawai</h2>
     <p class="text-center text-muted mb-4" style="font-size: 0.95rem;">
