--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </header>
 
     <div class="container my-4">
+      <h5 id="user-name-display" class="text-primary mb-3"></h5>
       <!-- Login + Dashboard Row -->
       <form onsubmit="login(); return false;" class="d-flex flex-wrap gap-2 justify-content-center justify-content-sm-between align-items-center">
         <select id="nama" class="form-select" style="min-width: 180px" required></select>
