--- a/index.html
+++ b/index.html
@@ -64,11 +64,32 @@
       <div class="card mb-4">
         <div class="card-body">
           <h5 class="card-title mb-3">Informasi Pegawai</h5>
-          <p class="mb-1"><strong>NIP:</strong> <span id="nip"></span></p>
-          <p class="mb-1"><strong>Sub Bidang:</strong> <span id="subbid"></span></p>
-          <p class="mb-1"><strong>Status Kepegawaian:</strong> <span id="status"></span></p>
-          <p class="mb-1"><strong>Golongan:</strong> <span id="golongan"></span></p>
-          <p class="mb-0"><strong>Jabatan:</strong> <span id="jabatan"></span></p>
+
+<div class="row mb-1">
+  <div class="col-4 fw-bold">NIP:</div>
+  <div class="col-8" id="nip"></div>
+</div>
+
+<div class="row mb-1">
+  <div class="col-4 fw-bold">Sub Bidang:</div>
+  <div class="col-8" id="subbid"></div>
+</div>
+
+<div class="row mb-1">
+  <div class="col-4 fw-bold">Status Kepegawaian:</div>
+  <div class="col-8" id="status"></div>
+</div>
+
+<div class="row mb-1">
+  <div class="col-4 fw-bold">Golongan:</div>
+  <div class="col-8" id="golongan"></div>
+</div>
+
+<div class="row mb-0">
+  <div class="col-4 fw-bold">Jabatan:</div>
+  <div class="col-8" id="jabatan"></div>
+</div>
+
         </div>
       </div>
 
