--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         flex-direction: column;
       }
     }
+        /* tulis CSS kamu di sini */
+    #dashboard-button {
+      display: none;
+    }
   </style>
 </head>
 <body>
